--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -1,19 +1,96 @@
 
-.header {
-    height: 75px;
-    width: 100%;
-    background-color: #00b0f0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    display: -ms-flexbox;
-    -ms-justify-content: flex-start;
-    -ms-flex-align: center;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 24px 0;
+}
+h1 {
+    font-family: 'Roboto Slab', serif;
+    font-size: 96px;
+    line-height: 96px;
+    font-weight: 700;
+}
+h2 {
+    font-family: 'Roboto Slab', serif;
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 700;
+}
+h3 {
+    font-family: 'Roboto Slab', serif;
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 300;
+}
+h4 {
+    font-family: 'Roboto Slab', serif;
+    font-size: 48px;
+    line-height: 72px;
+    font-weight: 300;
+}
+h5 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+h6 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #000000;
+    color: rgba(0, 0, 0, 0.5);
+}
+p {
+    margin: 0 0 24px 0;
 }
 
-.app-logo {
-    margin: 0 12px;
-    float: left;
+h3.title{
+    color: #00b0f0;
+    margin: 30px 0 30px 0;
+}
+
+body {
+
+    font-family: 'Open Sans', sans-serif;
+}
+
+div.loginContainer{
+    margin: 40px 0 40px 0;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+div.login.container{
+    width:50%;
+    overflow: hidden;
+    margin-top: 10px;
+    background-color: #f5f5f5;
+    border: 1px;
+}
+
+.dim {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 5 !important;
+    background-color: black;
+    filter: alpha(opacity=75); /* internet explorer */
+    opacity: 0.5;
+    display: table;
 }
 
 
@@ -65,6 +142,8 @@
 button.submit{
     color: #00b0f0;
 }
-button.submit:hover{
-    color: #f5f5f5;
-}
+s
+.btn-outline-primary {
+     color: #00b0f0;
+     border-color: #00b0f0;
+ }
