--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -58,6 +58,14 @@ h3.title{
     margin: 30px 0 30px 0;
 }
 
+.title, .logo{
+    display: inline;
+}
+
+.header {
+    padding: 30px 0 30px 0;
+}
+
 body {
 
     font-family: 'Open Sans', sans-serif;
